<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    app:cardBackgroundColor="@color/colorBlueLight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/det_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/id_operacao"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/det_num_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/det_text_id"/>

        <TextView
            android:id="@+id/det_text_cod_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cod_produto"
            android:textStyle="bold"
            android:layout_below="@id/det_text_id"/>

        <TextView
            android:id="@+id/det_produto_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/det_text_cod_produto"
            android:layout_below="@id/det_text_id"/>

        <TextView
            android:id="@+id/det_text_quant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/quantidade"
            android:textStyle="bold"
            android:layout_below="@id/det_text_cod_produto"/>

        <TextView
            android:id="@+id/det_quantidade_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/det_text_quant"
            android:layout_below="@id/det_text_cod_produto"/>

        <TextView
            android:id="@+id/det_text_vl_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/vltotal"
            android:textStyle="bold"
            android:layout_below="@id/det_text_quant"/>

        <TextView
            android:id="@+id/det_valortotal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@id/det_text_quant"
            android:layout_toEndOf="@id/det_text_vl_total"/>

        <TextView
            android:id="@+id/det_text_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/data_da_ocorrencia"
            android:textStyle="bold"
            android:layout_below="@id/det_text_vl_total"/>

        <TextView
            android:id="@+id/det_dataocorrencia_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/det_text_vl_total"
            android:layout_toEndOf="@id/det_text_data"/>

        <TextView
            android:id="@+id/det_text_operacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/operacaodc"
            android:textStyle="bold"
            android:layout_below="@id/det_text_data"/>

        <TextView
            android:id="@+id/det_operacaodc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@id/det_text_data"
            android:layout_toEndOf="@id/det_text_operacoes"/>

        <TextView
            android:id="@+id/det_text_descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/descricao"
            android:textStyle="bold"
            android:layout_below="@id/det_text_operacoes"/>

        <TextView
            android:id="@+id/det_descricao_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@id/det_text_operacoes"
            android:layout_toEndOf="@id/det_text_descricao"/>

        <TextView
            android:id="@+id/det_text_cancelado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/cancelado"
            android:textStyle="bold"
            android:layout_below="@id/det_text_descricao"/>

        <TextView
            android:id="@+id/det_cancelado_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@id/det_text_descricao"
            android:layout_toEndOf="@id/det_text_cancelado"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>