<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_nome_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_cliente"/>

        <TextView
            android:id="@+id/his_nome_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/text_nome_cliente"/>

        <TextView
            android:id="@+id/text_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo"
            android:layout_below="@id/text_nome_cliente"/>

        <TextView
            android:id="@+id/his_saldo_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@id/text_nome_cliente"
            android:layout_toEndOf="@id/text_saldo"/>

        <TextView
            android:id="@+id/text_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_consulta"
            android:layout_below="@id/text_saldo"/>

        <TextView
            android:id="@+id/his_data_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/text_saldo"
            android:layout_toEndOf="@id/text_data"/>

        <Button
            android:id="@+id/his_detalhes_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhes"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/his_data_id" />

    </RelativeLayout>
</android.support.v7.widget.CardView>